Version 0.0.5
Added VehicleTest, some modifications in sim objects